fix: Fixed bottom white gap on mobile

--- a/global.css
+++ b/global.css
@@ -15,6 +15,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 	position: relative;
 	min-height: 100vh;
+	height: 100%;
 }
 
 #particles-js {
