--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .form--wrapper {
-	margin: 2rem auto;
+	margin: 2rem auto 0 auto;
 	padding: 2rem;
 	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 	border-radius: 10px;
